[package]
name = "babe-runtime"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node kitchensink runtime."
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
publish = false
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { workspace = true, features = ["derive", "max-encoded-len",] }
scale-info = { workspace = true, features = ["derive"] }

static_assertions = "1.1.0"
log = { version = "0.4.17", default-features = false }

# primitives
sp-consensus-babe = { workspace = true}
sp-consensus-grandpa = { workspace = true  }
sp-block-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-core = { workspace = true}
sp-std = { workspace = true }
sp-api = { workspace = true  }
sp-runtime = { workspace = true  }
sp-staking = { workspace = true}
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true  }
sp-version = { workspace = true }
sp-io = { workspace = true }

# frame dependencies
frame-executive = { workspace = true  }
frame-election-provider-support = { workspace = true  }
frame-benchmarking = { workspace = true  }
frame-support = { workspace = true }
frame-system = { workspace = true  }
frame-system-benchmarking = { workspace = true , optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }

pallet-authorship = { workspace = true }
pallet-babe = { workspace = true }
pallet-offences = { workspace = true }
pallet-balances = { workspace = true}
pallet-grandpa = { workspace = true }
pallet-session = { features = [ "historical" ], workspace = true }
pallet-session-benchmarking = { workspace = true,  optional = true }
pallet-staking = { workspace = true  }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-staking-reward-curve = { workspace = true }

simnode-runtime-api = { path = "../../../runtime-api", default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
default = ["std"]
with-tracing = ["frame-executive/with-tracing"]
std = [
	"frame-system-benchmarking?/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"sp-block-builder/std",
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-core/std",
	"sp-std/std",
	"pallet-session/std",
	"pallet-session-benchmarking?/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-session/std",
	"pallet-sudo/std",
	"pallet-authorship/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-election-provider-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-offences/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"log/std",
	"frame-try-runtime?/std",
	"sp-io/std",
	"simnode-runtime-api/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
]
